base/src/test/resources/failure/patterns/issue281.aya.txt
In file $FILE:5:4 ->

  3 |  | suc Nat
  4 | 
  5 | def add {a b : Nat} : Nat
          ^-^

Error: Unhandled case: {zero}, {suc}
In file $FILE:5:4 ->

  3 |  | suc Nat
  4 | 
  5 | def add {a b : Nat} : Nat
  6 |  | {zero}, {zero} => b
  7 |  | {suc a}, {zero} => a
         ^------------------^ substituted to `a`
  8 |  | {suc a}, {b} => suc (add {a} {b})
         ^-------------------------------^ substituted to `suc (add {a} {zero})`

Error: The 2nd and the 3rd clauses are not confluent because we failed to unify
         a
       and
         suc (add {a} {zero})
In file $FILE:5:4 ->

  3 |  | suc Nat
  4 | 
  5 | def add {a b : Nat} : Nat
  6 |  | {zero}, {zero} => b
  7 |  | {suc a}, {zero} => a
  8 |  | {suc a}, {b} => suc (add {a} {b})
         ^-------------------------------^ substituted to `suc (add {a} {suc b})`
  9 |  | {suc a}, {suc b} => suc (add {a} {b})
         ^-----------------------------------^ substituted to `suc (add {a} {b})`

Error: The 3rd and the 4th clauses are not confluent because we failed to unify
         suc (add {a} {suc b})
       and
         suc (add {a} {b})
What are you doing?
